docker configure + sequelize

--- a/.env
+++ b/.env
@@ -1,7 +1,31 @@
 # Variables of environment
 
+## System port
 PORT=3000
-HOST=
-DATABASE=
-USER=
-PASSWORD=
+
+## Publishing environment
+PUBLISH='LOCAL'
+
+## Homologation database
+LOCAL_DIALECT=postgres
+LOCAL_HOST=localhost
+LOCAL_USER_NAME=postgres
+LOCAL_PASSWORD=password
+LOCAL_DATABASE=management-service
+LOCAL_PORT=5432
+
+## Homologation database
+HML_DIALECT=postgres
+HML_HOST=localhost
+HML_USER_NAME=postgres
+HML_PASSWORD=postgres
+HML_DATABASE=management-service
+HML_PORT=5432
+
+# Production database
+PROD_DIALECT=postgres
+PROD_HOST=localhost
+PROD_USER_NAME=postgres
+PROD_PASSWORD=postgres
+PROD_DATABASE=management-service
+PROD_PORT=5432
